# Internet-bar-charge-management-system

./: BillingManagement.cpp  BillingManagement.h  BillingStandardManagement.cpp  BillingStandardManagement.h  CMakeLists.txt  CardManagement.cpp  CardManagement.h  ConsumptionRecords.txt  CostManagement.cpp  CostManagement.h  C语言课设（网吧收费管理系统）.sln  C语言课设（网吧收费管理系统）.vcxproj  C语言课设（网吧收费管理系统）.vcxproj.filters  QueryStatistics.cpp  QueryStatistics.h  RightsManagement.cpp  RightsManagement.h  SaveMonthlyConsume.txt  System.cpp  System.h  card.txt  charge.txt  consuming.txt  main.cpp  operate.cpp  operate.h
